--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
   <div class="logo"><h3>Portfolio</h3></div>
 
-  <div class="hamburger" id="hamburger">&#9776;</div> <!-- Hamburger Icon -->
+  <div class="hamburger" id="hamburger">&#9776;</div> 
 
   <ul class="nav-links" id="nav-links">
     <li><a href="#hero">Home</a></li>
@@ -131,7 +131,6 @@
   <h2>Projects</h2>
   <div class="projects-container">
 
-    <!-- Project Card 1 -->
     <div class="project-card">
       <img src="assets/Quickreserve.png" alt="QuickReserve Project Screenshot">
       <div class="project-details">
@@ -145,7 +144,6 @@ via a secure dashboard.</p>
       </div>
     </div>
 
-    <!-- Project Card 2 -->
     <div class="project-card">
       <img src="assets/Project_management.png" alt="Team Catalyst Screenshot">
       <div class="project-details">
