Updated Project and resume

--- a/index.html
+++ b/index.html
@@ -155,6 +155,18 @@ via a secure dashboard.</p>
       </div>
     </div>
 
+    <div class="project-card">
+      <img src="assets/SMS.png" alt="QuickReserve Project Screenshot">
+      <div class="project-details">
+        <h3>SMS Spam Classifier</h3>
+        <p>Developed a machine learning model to classify SMS/Email messages as spam or not using Python, Scikit-learn, and Streamlit.
+Enhanced accuracy by updating the dataset with modern phishing examples and applied TF-IDF with Naive Bayes.</p>
+        <a href="https://github.com/manju374/SMS-Spam-Classifier.git" target="_blank" class="github-btn">
+          <i class="fab fa-github"></i> View Code
+        </a>
+      </div>
+    </div>
+
   </div>
 </section>
 
