Updated Experience Section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
         <li>C</li>
         <li>C++</li>
         <li>Python</li>
-        <li>Java</li>
       </ul>
     </div>
     <div class="skill-category">
@@ -60,7 +59,7 @@
         <li>HTML5</li>
         <li>CSS3</li>
         <li>JavaScript</li>
-        <li>React.js</li>
+        <li>Bootstrap</li>
       </ul>
     </div>
 
@@ -78,16 +77,6 @@
       <ul>
         <li>PostgreSQL</li>
         <li>SQL</li>
-        <li>MongoDB</li>
-      </ul>
-    </div>
-
-    <div class="skill-category">
-      <h3>Cybersecurity</h3>
-      <ul>
-        <li>OWASP Top 10</li>
-        <li>Vulnerability Assessment</li>
-        <li>Secure Coding Practices</li>
       </ul>
     </div>
 
@@ -125,6 +114,20 @@
     </div>
   </div>
 </section>
+
+<section id="experience">
+  <h2>Experience</h2>
+
+  <div class="experience-card">
+    <h3>Cyber Risk and Regulatory Launchpad Program</h3>
+    <p class="company">PwC | Feb 2025 – July 2025</p>
+    <ul>
+      <li>Cyber Risk & Regulatory Launchpad Trainee Program, gaining practical knowledge in Python programming, cybersecurity fundamentals, and prompt engineering.</li>
+      <li>Developed skills in threat analysis, secure coding practices, and AI-powered automation techniques, applying them to real-world business and security scenarios.</li>
+    </ul>
+  </div>
+</section>
+
 
 
   <section id="projects">
