--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <li><a href="#skills">Skills</a></li>
     <li><a href="#projects">Projects</a></li>
     <li><a href="#education">Education</a></li>
+    <li><a href="#experience">Eeperience</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
@@ -83,15 +84,6 @@
     </div>
 
     <div class="skill-category">
-      <h3>Cybersecurity</h3>
-      <ul>
-        <li>OWASP Top 10</li>
-        <li>Vulnerability Assessment</li>
-        <li>Secure Coding Practices</li>
-      </ul>
-    </div>
-
-    <div class="skill-category">
       <h3>Tools</h3>
       <ul>
         <li>Git & GitHub</li>
@@ -125,6 +117,19 @@
     </div>
   </div>
 </section>
+
+<section id="experience">
+  <h2>Experience</h2>
+  <div class="experience-card">
+    <h3>Cyber Risk and Regulatory Launchpad Program.</h3>
+    <p class="company">PwC | Feb 2025 – July 2025</p>
+    <ul>
+      <li>Completed PwC Cyber Risk & Regulatory Launchpad Trainee Program, gaining practical knowledge in Python programming, cybersecurity fundamentals, and prompt engineering.</li>
+      <li>Developed skills in threat analysis, secure coding practices, and AI-powered automation techniques, applying them to real-world business and security scenarios.</li>
+    </ul>
+  </div>
+</section>
+
 
 
   <section id="projects">
