--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm a passionate full-stack web developer with a strong foundation in modern technologies like Node.js, React.js, Express, and PostgreSQL. I enjoy building efficient, user-friendly web applications and constantly strive to learn and implement new tools and frameworks. With a keen eye for clean UI design and performance optimization, I aim to deliver solutions that are both functional and visually appealing.</p>
+    <p>I'm a passionate full-stack web developer with a strong foundation in modern technologies like Node.js, Express, and PostgreSQL. I enjoy building efficient, user-friendly web applications and constantly strive to learn and implement new tools and frameworks. With a keen eye for clean UI design and performance optimization, I aim to deliver solutions that are both functional and visually appealing.</p>
   </section>
 
   <section id="skills">
@@ -83,15 +83,6 @@
     </div>
 
     <div class="skill-category">
-      <h3>Cybersecurity</h3>
-      <ul>
-        <li>OWASP Top 10</li>
-        <li>Vulnerability Assessment</li>
-        <li>Secure Coding Practices</li>
-      </ul>
-    </div>
-
-    <div class="skill-category">
       <h3>Tools</h3>
       <ul>
         <li>Git & GitHub</li>
@@ -125,6 +116,19 @@
     </div>
   </div>
 </section>
+<section id="experience">
+  <h2>Experience</h2>
+
+  <div class="experience-card">
+    <h3>Cyber Risk and Regulatory Launchpad Program.</h3>
+    <p class="company">PwC | Feb 2025 – July 2025</p>
+    <ul>
+      <li>Completed PwC Cyber Risk & Regulatory Launchpad Trainee Program, gaining practical knowledge in Python programming, cybersecurity fundamentals, and prompt engineering.</li>
+      <li>Developed skills in threat analysis, secure coding practices, and AI-powered automation techniques, applying them to real-world business and security scenarios.</li>
+    </ul>
+  </div>
+</section>
+
 
 
   <section id="projects">
