Updated skills and about

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm a passionate full-stack web developer with a strong foundation in modern technologies like Node.js, Express, and PostgreSQL. I enjoy building efficient, user-friendly web applications and constantly strive to learn and implement new tools and frameworks. With a keen eye for clean UI design and performance optimization, I aim to deliver solutions that are both functional and visually appealing.</p>
+    <p>I'm a passionate full-stack web developer and cybersecurity enthusiast with a strong foundation in modern technologies like Node.js, Express, PostgreSQL, and MySQL. I enjoy building efficient, user-friendly web applications and have skills in clean UI design and performance optimization, aiming to deliver solutions that are functional, visually appealing, and reliable.</p>
   </section>
 
   <section id="skills">
@@ -61,7 +61,6 @@
         <li>HTML5</li>
         <li>CSS3</li>
         <li>JavaScript</li>
-        <li>React.js</li>
       </ul>
     </div>
 
